--- a/DirectXGame/DirectXGame.vcxproj.filters
+++ b/DirectXGame/DirectXGame.vcxproj.filters
@@ -49,7 +49,7 @@
     <Filter Include="ヘッダー ファイル\math">
       <UniqueIdentifier>{647f4977-924a-4954-923f-5619e5afc9a3}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\2d">
+    <Filter Include="ソース ファイル\base\2d">
       <UniqueIdentifier>{814a0f6d-f847-4c45-856d-4688fa4c9e6c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -67,7 +67,7 @@
       <Filter>ソース ファイル\scene</Filter>
     </ClCompile>
     <ClCompile Include="2d\ImGuiManager.cpp">
-      <Filter>ソース ファイル\2d</Filter>
+      <Filter>ソース ファイル\base\2d</Filter>
     </ClCompile>
     <ClCompile Include="Affine.cpp">
       <Filter>ソース ファイル</Filter>
